@@ -114,6 +114,7 @@
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <signal name="clicked" handler="prev_song" last_modification_time="Mon, 06 Oct 2003 11:52:21 GMT"/>
+		  <accelerator key="z" modifiers="0" signal="clicked"/>
 
 		  <child>
 		    <widget class="GtkImage" id="image1">
@@ -139,6 +140,8 @@
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <signal name="clicked" handler="play_song" last_modification_time="Mon, 06 Oct 2003 11:53:53 GMT"/>
+		  <accelerator key="x" modifiers="0" signal="clicked"/>
+		  <accelerator key="c" modifiers="0" signal="clicked"/>
 
 		  <child>
 		    <widget class="GtkImage" id="play_button_image">
@@ -164,6 +167,7 @@
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <signal name="clicked" handler="stop_song" last_modification_time="Mon, 06 Oct 2003 11:52:10 GMT"/>
+		  <accelerator key="v" modifiers="0" signal="clicked"/>
 
 		  <child>
 		    <widget class="GtkImage" id="image2">
@@ -189,6 +193,7 @@
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <signal name="clicked" handler="next_song" last_modification_time="Mon, 06 Oct 2003 11:52:38 GMT"/>
+		  <accelerator key="b" modifiers="0" signal="clicked"/>
 
 		  <child>
 		    <widget class="GtkImage" id="image4">
@@ -223,12 +228,13 @@
 		<widget class="GtkToggleButton" id="rand_button">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">Rand</property>
+		  <property name="label" translatable="yes">R_and</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="active">False</property>
 		  <property name="inconsistent">False</property>
 		  <signal name="toggled" handler="random_pl" last_modification_time="Mon, 06 Oct 2003 14:18:22 GMT"/>
+		  <accelerator key="a" modifiers="0" signal="clicked"/>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
@@ -241,12 +247,13 @@
 		<widget class="GtkToggleButton" id="rep_button">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">Rep</property>
+		  <property name="label" translatable="yes">R_ep</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="active">False</property>
 		  <property name="inconsistent">False</property>
 		  <signal name="toggled" handler="repeat_pl" last_modification_time="Mon, 06 Oct 2003 14:18:35 GMT"/>
+		  <accelerator key="e" modifiers="0" signal="clicked"/>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
@@ -271,10 +278,11 @@
 		  <property name="visible">True</property>
 		  <property name="sensitive">False</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">PM</property>
+		  <property name="label" translatable="yes">_PM</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <signal name="clicked" handler="create_playlist" last_modification_time="Sat, 11 Oct 2003 20:12:28 GMT"/>
+		  <accelerator key="p" modifiers="0" signal="clicked"/>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
@@ -729,6 +737,140 @@
 	    <widget class="GtkLabel" id="label1">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Connection</property>
+	      <property name="use_underline">True</property>
+	      <property name="use_markup">False</property>
+	      <property name="justify">GTK_JUSTIFY_LEFT</property>
+	      <property name="wrap">False</property>
+	      <property name="selectable">False</property>
+	      <property name="xalign">0.5</property>
+	      <property name="yalign">0.5</property>
+	      <property name="xpad">0</property>
+	      <property name="ypad">0</property>
+	    </widget>
+	    <packing>
+	      <property name="type">tab</property>
+	    </packing>
+	  </child>
+
+	  <child>
+	    <widget class="GtkTable" id="table8">
+	      <property name="border_width">12</property>
+	      <property name="visible">True</property>
+	      <property name="n_rows">3</property>
+	      <property name="n_columns">2</property>
+	      <property name="homogeneous">False</property>
+	      <property name="row_spacing">6</property>
+	      <property name="column_spacing">6</property>
+
+	      <child>
+		<widget class="GtkCheckButton" id="ck_popup_enable">
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="label" translatable="yes">Enable Pop-ups</property>
+		  <property name="use_underline">True</property>
+		  <property name="relief">GTK_RELIEF_NORMAL</property>
+		  <property name="active">False</property>
+		  <property name="inconsistent">False</property>
+		  <property name="draw_indicator">True</property>
+		  <signal name="toggled" handler="popup_enable_toggled" last_modification_time="Wed, 25 Feb 2004 22:21:16 GMT"/>
+		</widget>
+		<packing>
+		  <property name="left_attach">0</property>
+		  <property name="right_attach">2</property>
+		  <property name="top_attach">0</property>
+		  <property name="bottom_attach">1</property>
+		  <property name="x_options">fill</property>
+		  <property name="y_options"></property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkLabel" id="label62">
+		  <property name="visible">True</property>
+		  <property name="label" translatable="yes">Position:</property>
+		  <property name="use_underline">False</property>
+		  <property name="use_markup">False</property>
+		  <property name="justify">GTK_JUSTIFY_LEFT</property>
+		  <property name="wrap">False</property>
+		  <property name="selectable">False</property>
+		  <property name="xalign">1</property>
+		  <property name="yalign">0.5</property>
+		  <property name="xpad">0</property>
+		  <property name="ypad">0</property>
+		</widget>
+		<packing>
+		  <property name="left_attach">0</property>
+		  <property name="right_attach">1</property>
+		  <property name="top_attach">1</property>
+		  <property name="bottom_attach">2</property>
+		  <property name="x_options">fill</property>
+		  <property name="y_options"></property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkOptionMenu" id="om_popup_position">
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="history">0</property>
+
+		  <child>
+		    <widget class="GtkMenu" id="menu3">
+
+		      <child>
+			<widget class="GtkMenuItem" id="upper_left_corner1">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Upper Left Corner</property>
+			  <property name="use_underline">True</property>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkMenuItem" id="lower_left_corner1">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Lower Left Corner</property>
+			  <property name="use_underline">True</property>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkMenuItem" id="upper_right_corner1">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Upper Right Corner</property>
+			  <property name="use_underline">True</property>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkMenuItem" id="lower_right_corner1">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Lower Right Corner</property>
+			  <property name="use_underline">True</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+		</widget>
+		<packing>
+		  <property name="left_attach">1</property>
+		  <property name="right_attach">2</property>
+		  <property name="top_attach">1</property>
+		  <property name="bottom_attach">2</property>
+		  <property name="x_options">fill</property>
+		  <property name="y_options"></property>
+		</packing>
+	      </child>
+	    </widget>
+	    <packing>
+	      <property name="tab_expand">False</property>
+	      <property name="tab_fill">True</property>
+	    </packing>
+	  </child>
+
+	  <child>
+	    <widget class="GtkLabel" id="label61">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">_Pop up</property>
 	      <property name="use_underline">True</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
