@@ -10,29 +10,29 @@ typedef struct
 	gboolean popup_stay;
 }popup_struct;
 typedef struct
-    {
-    /* the mpd status struct used  in the whole program */
-    mpd_Status *status;
-    /* the mpd connection */
-    mpd_Connection * connection;
-    /* status about the connection */
-    mpd_Stats *stats;
-    /* connection lock, to prevent to functions to use the connection concurrent */
-    gboolean conlock;
-    /* playlist number this is to check if the playlist changed */
-    int playlist_id;
-    /* the state, if the state changes I know I have to update some stuff */
-    int state;
-    /* the volume if the volume change I also have to update some stuff */
-    int volume;
-    /* the current song */
-    int song;
-    /* Elapsed or remaining time */
-    int time_format;
-    /* The Playlist, only in my memory */
-    GList *playlist;
-    /* the current song */
-    mpd_Song *cursong;
+{
+	/* the mpd status struct used  in the whole program */
+	mpd_Status *status;
+	/* the mpd connection */
+	mpd_Connection * connection;
+	/* status about the connection */
+	mpd_Stats *stats;
+	/* connection lock, to prevent to functions to use the connection concurrent */
+	gboolean conlock;
+	/* playlist number this is to check if the playlist changed */
+	int playlist_id;
+	/* the state, if the state changes I know I have to update some stuff */
+	int state;
+	/* the volume if the volume change I also have to update some stuff */
+	int volume;
+	/* the current song */
+	int song;
+	/* Elapsed or remaining time */
+	int time_format;
+	/* The Playlist, only in my memory */
+	GList *playlist;
+	/* the current song */
+	mpd_Song *cursong;
 	/* playlist running. */
 	gboolean playlist_running;
 	/* filter enabled */
@@ -41,27 +41,27 @@ typedef struct
 	gint  filter_field;
 	/* Some internall data..  this to save trafic with mpd daemon */
 	GtkListStore *playlist_list;
-    	GtkListStore *cur_list; /* this one should be empty..  no need to keep that in memory */
+	GtkListStore *cur_list; /* this one should be empty..  no need to keep that in memory */
 	GtkListStore *dir_list;
 	GtkListStore *file_list;
 	GtkListStore *id3_songs_list;
 	GtkListStore *search_list;
 	GtkTreeStore *id3_album_list;
 	gchar path[1024];
-    /* playlists view hidden */
-    gint playlist_view_hidden;
+	/* playlists view hidden */
+	gint playlist_view_hidden;
 	guint64 total_number_of_songs;
 	guint64	total_playtime; 
-    /* tray icon*/
-    gboolean do_tray;
-    popup_struct popup;
-    } internal_data;
+	/* tray icon*/
+	gboolean do_tray;
+	popup_struct popup;
+} internal_data;
 
 enum{
 	TIME_FORMAT_ELAPSED,
 	TIME_FORMAT_REMAINING,
 	TIME_FORMAT_PERCENTAGE
-	};
+};
 
 extern internal_data info;
 extern guint update_timeout;
@@ -88,13 +88,13 @@ int disconnect_to_mpd();
 /* player.c*/
 /* scrolling title in main window */
 typedef struct 	{	
-		char *msg;
-		char *base_msg;
-		char *popup_msg;
-		int pos;
-		int up;
-		gboolean exposed;
-	} scrollname;
+	char *msg;
+	char *base_msg;
+	char *popup_msg;
+	int pos;
+	int up;
+	gboolean exposed;
+} scrollname;
 extern scrollname scroll;
 int update_player();
 void create_player();
@@ -105,12 +105,12 @@ void msg_set_base();
 
 /* preferences.c */
 typedef struct
-	{
+{
 	char host[256];
 	int port;
 	float timeout; /* seconds.ms */
 	gboolean autoconnect;
-	} pref_struct;
+} pref_struct;
 extern pref_struct preferences;
 void create_preferences_window();
 void preferences_update();
